--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ django-widget-tweaks = "^1.4.12"
 fontawesomefree = "^6.2.0"
 psycopg2-binary = "^2.9.4"
 dj-database-url = "^1.0.0"
+django-tables2 = "^2.4.1"
+django-filter = "^22.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
