--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ psycopg2-binary = "^2.9.4"
 dj-database-url = "^1.0.0"
 django-tables2 = "^2.4.1"
 django-filter = "^22.1"
+django-ninja = "^0.19.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
