--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "3.10.7"
-Django = "^4.1.2"
 django-htmx = "^1.12.2"
 django-extensions = "^3.2.1"
 django-environ = "^0.9.0"
@@ -27,6 +26,12 @@ django-ninja = "^0.19.1"
 django-taggit = "^3.0.0"
 Markdown = "^3.4.1"
 django-debug-toolbar = "^3.7.0"
+Django = "4.0.6"
+redis = "^4.3.4"
+django-celery-beat = "^2.3.0"
+django-celery-results = "^2.4.0"
+python-decouple = "^3.6"
+celery = "^5.2.7"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
